# check-word-doc

./: .gitignore  ARCHITECTURE.md  AUTHOR_LIST_SUMMARY.md  CHANGELOG_CLEANUP.md  CHANGELOG_EXTENSIONS.md  CHANGELOG_HARDCODE_REVIEW.md  CHANGELOG_POSITION_SYNTAX.md  CLEANUP_SUMMARY.md  INSTALL.md  PROJECT_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  cspell.config.yaml  pyproject.toml  script_generated_analysis.md
config/: CONFIG_STRUCTURE.md  README.md  base.yaml  basic.yaml  data_paper.yaml  data_paper_declarative.yaml  data_paper_simple.yaml  data_paper_template.yaml  default.yaml  example.yaml  example_format_rules.yaml  extensions_example.yaml  test_class_based.yaml
doc/: ARCHITECTURE.md  AUTHOR_LIST_CONFIG.md  BASIC_RULES.md  CONCEPTS.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SUMMARY.md  CONFIG_ALIGNMENT.md  CONFIG_FORMAT.md  DATA_PAPER_TEMPLATE_README.md  DECLARATIVE_CONFIG.md  EXTENSIONS.md  GENERIC_RULES_DESIGN.md  GENERIC_RULES_USAGE.md  HARDCODED_REVIEW.md  IMPLEMENTATION_PLAN.md  LIMITATIONS.md  POSITION_SYNTAX.md  QUERY_TOOL.md  README.md  RULES.md  RULES_README.md  RULES_WITH_SELECTOR.md  RULE_CLASSIFICATION.md  SELECTOR.md  SELECTOR_EXAMPLES.md  TEMPLATE_ADAPTATION_EXAMPLE.md  plan.md
examples/: selector_demo.py
script/: CONFIG_LOADER_README.md  REFERENCE_ANALYSIS_README.md  check.py  check_document_format.py  check_figure_format.py  check_functions.py  check_references.py  chinese_text.py  cli.py  config_loader.py  cover.py  empty_lines.py  figure.py  figure_format.py  functions.py  generate_reference_analysis.py  header_footer.py  page_numbers.py  paragraphs.py  query.py  references.py  report.py  structure.py  test_config_loader.py  test_reference_analysis.py  toc.py  utils.py
test/: abstract_en_test.py  abstract_test.py  author_affiliation_format_test.py  author_affiliation_test.py  author_count_validation.py  author_list_en_test.py  (+27 more)
(+56 files in other folders)
