[project]
name = "check-word-doc"
version = "0.1.0"
description = "Word document format checking tool"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.8.1"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "flake8>=6.0"]

[project.scripts]
check-doc = "script.check:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "script" }]
