[tool.poetry]
name = "docx-lint"
version = "2.0.0"
description = "Word document format checking tool with plugin-based architecture"
authors = ["phenix3443"]
readme = "ARCHITECTURE.md"
license = "MIT"
packages = [{ include = "script" }]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.8"
mypy = "^1.0"

[tool.poetry.scripts]
docx-lint = "script.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_check.py", "test_*.py"]
addopts = "-v --tb=short"
